HW2 done