@@ -4,7 +4,6 @@ import java.util.concurrent.*;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 
-
 public class GameRoomSimulation {
     private static int MAXIMUM_THREAD = 10;
     private static int intheRoom = 0; // measure number of the player in the room
@@ -13,34 +12,35 @@ public class GameRoomSimulation {
 
         // fixed size thread pool
         ExecutorService pool = java.util.concurrent.Executors.newFixedThreadPool(MAXIMUM_THREAD);
-
+        Semaphore roomPermit = new Semaphore(3);
+        Lock lock = new ReentrantLock();
         System.out.println("Start multithreading");
 
         // player
         Runnable player = () -> {
             while (true) {
-                // always want to join the room
-                // System.out.println("Player "+ Thread.currentThread().getId()+" wants to join the room");
-                if (intheRoom < 1) {
-                    // wait!!! can it works?
-                    intheRoom++; // The number of player is 1
-                    // System.out.println("Player "+ Thread.currentThread().getId()+" is in the room");
-                    if (intheRoom > 1){
-                        System.out.println("Whoops We have " + intheRoom + " player"); // can it ever happens?
-                        break;
-                    }
-                    // nap for a while
-                    // SleepUtilities.nap();
-                    // leave the room
-                    intheRoom--;
-                }
-                // nap for a while
-                //SleepUtilities.nap();
+                System.out.println("Player " + Thread.currentThread().threadId() + " wants to join the room");
+                // Entry
+                roomPermit.acquire();
+
+                // Critical section
+
+                synchronized(lock){intheRoom++;}
+                System.out.println("Player " + Thread.currentThread().threadId() + " is in the room");
+                System.out.println(intheRoom + " players in the room");
+                SleepUtilities.nap();
+                synchronized(lock){intheRoom--;}
+                // Exit
+                roomPermit.release();
             }
         };
 
         // Start the task with two players
-        pool.execute(player); 
+        pool.execute(player);
+        pool.execute(player);
+        pool.execute(player);
+        pool.execute(player);
+        pool.execute(player);
         pool.shutdown(); // wait for termination
 
         try {
